@@ -2,28 +2,24 @@ package com.example.empresa.controller;
 
 import com.example.empresa.entity.Empleado;
 import com.example.empresa.service.EmpleadoService;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
-
-import org.springframework.beans.factory.annotation.Autowired;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.List;
+import java.util.Collections;
 
-import static org.hamcrest.Matchers.hasSize;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@WebMvcTest(controllers = EmpleadoController.class)
-@ActiveProfiles("test")
+@WebMvcTest(EmpleadoController.class)
 class EmpleadoControllerTest {
 
     @Autowired
@@ -32,50 +28,42 @@ class EmpleadoControllerTest {
     @MockBean
     private EmpleadoService empleadoService;
 
-    @Test
-    void GET_obtenerTodos_devuelve200_yLista() throws Exception {
-        Empleado e = new Empleado();
-        e.setId(1L);
-        e.setNombre("Juan");
-        e.setApellido("Pérez");
-        e.setEmail("juan@empresa.com");
-        e.setFechaContratacion(LocalDate.now());
-        e.setSalario(new BigDecimal("1234.56"));
+    @Autowired
+    private ObjectMapper objectMapper;
 
-        Mockito.when(empleadoService.obtenerTodos()).thenReturn(List.of(e));
+    @Test
+    void cuandoListarEmpleados_entoncesRetornaJson() throws Exception {
+        Empleado empleado = new Empleado();
+        empleado.setId(1L);
+        empleado.setNombre("Juan");
+        empleado.setApellido("Pérez");
+        empleado.setEmail("juan.perez@empresa.com");
+        empleado.setFechaContratacion(LocalDate.now());
+        empleado.setSalario(new BigDecimal("50000.00"));
+
+        when(empleadoService.obtenerTodos()).thenReturn(Collections.singletonList(empleado));
 
         mockMvc.perform(get("/api/empleados"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].email").value("juan@empresa.com"));
+                .andExpect(jsonPath("$[0].email").value("juan.perez@empresa.com"));
     }
 
     @Test
-    void POST_crear_devuelve201() throws Exception {
-        Empleado e = new Empleado();
-        e.setId(10L);
-        e.setNombre("Ana");
-        e.setApellido("García");
-        e.setEmail("ana@empresa.com");
-        e.setFechaContratacion(LocalDate.now());
-        e.setSalario(new BigDecimal("5000"));
+    void cuandoCrearEmpleado_entoncesRetornaEmpleadoCreado() throws Exception {
+        Empleado empleado = new Empleado();
+        empleado.setId(1L);
+        empleado.setNombre("Juan");
+        empleado.setApellido("Pérez");
+        empleado.setEmail("juan.perez@empresa.com");
+        empleado.setFechaContratacion(LocalDate.now());
+        empleado.setSalario(new BigDecimal("50000.00"));
 
-        Mockito.when(empleadoService.guardar(any(Empleado.class))).thenReturn(e);
-
-        String json = """
-        {
-          "nombre": "Ana",
-          "apellido": "García",
-          "email": "ana@empresa.com",
-          "fechaContratacion": "2025-01-01",
-          "salario": 5000
-        }
-        """;
+        when(empleadoService.guardar(empleado)).thenReturn(empleado);
 
         mockMvc.perform(post("/api/empleados")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(json))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(empleado)))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.id").value(10));
+                .andExpect(jsonPath("$.email").value("juan.perez@empresa.com"));
     }
 }
